fetch my room which is currently booked

--- a/client/src/locales/am/translation.json
+++ b/client/src/locales/am/translation.json
@@ -201,7 +201,7 @@
             "enterpassword": "የይለፍ ቃል አስገባ"
         },
         "profile": {
-            "title": "የመገለጫ ገጽ",
+            "title": "የመገለጫ",
             "confirmpasswordPlaceholder": "የይለፍ ቃልዎን ያረጋግጡ",
             "profile": "መገለጫ",
             "usernamePlaceholder": "ስምዎን አስገባ",
