--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -208,7 +208,7 @@
       "enterpassword":"Enter Password"
     },
     "profile":{
-      "title":"Profile page",
+      "title":"Profile",
       "confirmpasswordPlaceholder":"Confirm Your Password",
       "profile":"Profile",
       "usernamePlaceholder":"Enter Your Name",
