Refactor language options in DefaultLayout component and update notification icon

--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -172,6 +172,7 @@
       "postHouse":"Post House",
       "myroom":"My Room",
       "wallet":"Wallet",
+      "notification":"Notification",
       "cashorder":"Cash Order",
       "dashboard":"Dashboard",
       "alluser":"All User",
