Add notification translation to Amharic locale

--- a/client/src/locales/am/translation.json
+++ b/client/src/locales/am/translation.json
@@ -163,6 +163,7 @@
             "blockedhouse": "ታግሷል ቤት",
             "withdrawalconfirm": "የማስወገድ ማረጋገጫ",
             "admin": "አስተዳዳሪ",
+            "notification":"ማስታወቂያ",
             "landloard": "አከራይ",
             "tenant": "ተከራይ",
             "houserentsys": "የቤት ኪራይ ስርዓት",
