--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -48,7 +48,12 @@
       "rent":"Rent per month",
       "ETB":"ETB",
       "Block":"Block",
-      "Unblock":"Unblock"
+      "Unblock":"Unblock",
+      "confirmTitle": "Are you sure?",
+      "confirmText": "Do you really want to block/unblock this house?",
+      "confirmButton": "Yes, block it!",
+      "cancelButton": "Cancel"
+      
     },
     "withdrewconfirm":{}
   },
