i change some style style

--- a/client/src/locales/am/translation.json
+++ b/client/src/locales/am/translation.json
@@ -5,7 +5,7 @@
             "blocked": "ታግሷል",
             "unblocked": "አልታገሰም",
             "member": "አባላት ዝርዝር",
-            "phone": "ስልክ",
+            "date": "ቀን",
             "role": "ሚና",
             "status": "ሁኔታ",
             "seeall": "ስለ ሁሉም አባላት መረጃ ይመልከቱ",
