--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -5,7 +5,7 @@
       "blocked":"Blocked",
       "unblocked":"Unblocked",
       "member":"Members List",
-      "phone":"Phone",
+      "date":"Date",
       "role":"Role",
       "status":"Status",
       "seeall":"See information About All Members",
