--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -96,7 +96,9 @@
     "edithouse":{
       "info":"House Information",
       "rent":"Rent per month",
-      "update":"Update"
+      "rentrequired":"Rent per month is required",
+      "update":"Update",
+      "number":"the money is in a number form"
     },
     "housebookeduser":{
       "noroom":"No Room",
