Add Footer component to guest pages

--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -184,7 +184,7 @@
       "dashboard":"Dashboard",
       "alluser":"All User",
       "blockedhouse":"Blocked House",
-      "withdrawalconfirm":"Withdrawal Confirm",
+      "withdrawalconfirm":"cashout",
       "admin":"Admin",
       "landloard":"Landloard",
       "tenant":"Tenant",
