--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -63,6 +63,7 @@
       "welcome": "Welcome",
       "search": "Search...",
       "Home": "Home",
+      "contact": "Contact",
       "About": "About",
       "signin": "Sign In"
     }
